21 jan update responsiveness and testing modules

--- a/alumni-pgdbm-pgdm.html
+++ b/alumni-pgdbm-pgdm.html
@@ -16,7 +16,7 @@
     <script defer type="module" async
         src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Fsmsvarana3204back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.10"></script>
     <script defer type="module" defer src="https://static.rocket.new/rocket-shot.js?v=0.0.1"></script>
-    <link rel="shortcut icon" href="./public/images/icons/logoMain.png" type="image/x-icon">
+    <link rel="shortcut icon" href=".public/images/icons/logoMain.png" type="image/x-icon">
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
@@ -665,7 +665,7 @@
                         <div class="alumni-years">
                             <a href="/view-alumni-member-details.html">
                                 <h2>2021</h2>
-                                <img src="/public/images/shape/wave.png" alt="">
+                                <img src="public/images/shape/wave.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -673,7 +673,7 @@
                         <div class="alumni-years">
                             <a href="/view-alumni-member-details.html">
                                 <h2>2020</h2>
-                                <img src="/public/images/shape/wave.png" alt="">
+                                <img src="public/images/shape/wave.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -681,7 +681,7 @@
                         <div class="alumni-years">
                             <a href="/view-alumni-member-details.html">
                                 <h2>2019</h2>
-                                <img src="/public/images/shape/wave.png" alt="">
+                                <img src="public/images/shape/wave.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -689,7 +689,7 @@
                         <div class="alumni-years">
                             <a href="/view-alumni-member-details.html">
                                 <h2>2018</h2>
-                                <img src="/public/images/shape/wave.png" alt="">
+                                <img src="public/images/shape/wave.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -697,7 +697,7 @@
                         <div class="alumni-years">
                             <a href="/view-alumni-member-details.html">
                                 <h2>2017</h2>
-                                <img src="/public/images/shape/wave.png" alt="">
+                                <img src="public/images/shape/wave.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -705,7 +705,7 @@
                         <div class="alumni-years">
                             <a href="/view-alumni-member-details.html">
                                 <h2>2016</h2>
-                                <img src="/public/images/shape/wave.png" alt="">
+                                <img src="public/images/shape/wave.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -713,7 +713,7 @@
                         <div class="alumni-years">
                             <a href="/view-alumni-member-details.html">
                                 <h2>2015</h2>
-                                <img src="/public/images/shape/wave.png" alt="">
+                                <img src="public/images/shape/wave.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -721,7 +721,7 @@
                         <div class="alumni-years">
                             <a href="/view-alumni-member-details.html">
                                 <h2>2014</h2>
-                                <img src="/public/images/shape/wave.png" alt="">
+                                <img src="public/images/shape/wave.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -729,7 +729,7 @@
                         <div class="alumni-years">
                             <a href="/view-alumni-member-details.html">
                                 <h2>2013</h2>
-                                <img src="/public/images/shape/wave.png" alt="">
+                                <img src="public/images/shape/wave.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -737,7 +737,7 @@
                         <div class="alumni-years">
                             <a href="/view-alumni-member-details.html">
                                 <h2>2012</h2>
-                                <img src="/public/images/shape/wave.png" alt="">
+                                <img src="public/images/shape/wave.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -745,7 +745,7 @@
                         <div class="alumni-years">
                             <a href="/view-alumni-member-details.html">
                                 <h2>2011</h2>
-                                <img src="/public/images/shape/wave.png" alt="">
+                                <img src="public/images/shape/wave.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -753,7 +753,7 @@
                         <div class="alumni-years">
                             <a href="/view-alumni-member-details.html">
                                 <h2>2010</h2>
-                                <img src="/public/images/shape/wave.png" alt="">
+                                <img src="public/images/shape/wave.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -767,6 +767,7 @@
 
 
     <!-- Footer -->
+    <!-- Footer -->
     <footer class="footer text-white pt-16 pb-8">
         <div class="container-custom">
             <div class="footer-cols">
@@ -775,16 +776,16 @@
                 <div class="text-deco-none">
                     <h3 class="font-headline font-bold text-lg mb-6">Admission</h3>
                     <ul class="space-y-3">
-                        <li><a href="javascript:void(0)"
+                        <li><a href="scholarship.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Scholarships</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://epay.smsvaranasi.com/"
                                 class="text-gray-400 hover:text-accent transition-colors">Online Fee Deposit</a></li>
-                        <li><a href="javascript:void(0)" class="text-gray-400 hover:text-accent transition-colors">Our
+                        <li><a href="list_of_recruiter.html"
+                                class="text-gray-400 hover:text-accent transition-colors">Our
                                 Recruiters</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="hostel-transport.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Hostel & Transport</a></li>
-                        <li><a href="javascript:void(0)"
-                                class="text-gray-400 hover:text-accent transition-colors">FAQ</a>
+                        <li><a href="FAQ.html" class="text-gray-400 hover:text-accent transition-colors">FAQ</a>
                         </li>
                     </ul>
                 </div>
@@ -793,10 +794,10 @@
                 <div class="text-deco-none">
                     <h3 class="font-headline font-bold text-lg mb-6">Media</h3>
                     <ul class="space-y-3">
-                        <li><a href="javascript:void(0)" class="text-gray-400 hover:text-accent transition-colors ">News
+                        <li><a href="news-room.html" class="text-gray-400 hover:text-accent transition-colors ">News
                                 Room</a></li>
-                        <li><a href="javascript:void(0)"
-                                class="text-gray-400 hover:text-accent transition-colors ">Video Gallery</a></li>
+                        <li><a href="video-clips.html" class="text-gray-400 hover:text-accent transition-colors ">Video
+                                Gallery</a></li>
 
                     </ul>
                 </div>
@@ -805,9 +806,8 @@
                 <div class="text-deco-none">
                     <h3 class="font-headline font-bold text-lg mb-6">Events</h3>
                     <ul class="space-y-3">
-                        <li><a href="javascript:void(0)"
-                                class="text-gray-400 hover:text-accent transition-colors">FDP</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="fdp.html" class="text-gray-400 hover:text-accent transition-colors">FDP</a></li>
+                        <li><a href="https://icon.smsvaranasi.com/"
                                 class="text-gray-400 hover:text-accent transition-colors">ICON</a></li>
                     </ul>
                 </div>
@@ -816,24 +816,26 @@
                 <div class="text-deco-none">
                     <h3 class="font-headline font-bold text-lg mb-6">Student's Club</h3>
                     <ul class="space-y-3">
-                        <li><a href="javascript:void(0)"
+                        <li><a href="rainbow-social-welfare-club.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Rainbow (Social Welfare
                                 Club)</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="contrast-creative-club.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Contrast (Creative Club)</a>
                         </li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="synergy-the-literary-club.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Synergy (The Literary
                                 Club)</a></li>
-                        <li><a href="javascript:void(0)" class="text-gray-400 hover:text-accent transition-colors">Spark
+                        <li><a href="spark-performing-arts-cultural-club.html"
+                                class="text-gray-400 hover:text-accent transition-colors">Spark
                                 (Performing Arts Cultural Club)</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="panorama-photography-club.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Panorama (Photography
                                 Club)</a>
                         </li>
-                        <li><a href="javascript:void(0)" class="text-gray-400 hover:text-accent transition-colors">Crest
+                        <li><a href="crest-sports-club.html"
+                                class="text-gray-400 hover:text-accent transition-colors">Crest
                                 (Sports Club)</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="technical-club.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Livewire (Technical Club)</a>
                         </li>
                     </ul>
@@ -842,30 +844,31 @@
                 <div class="text-deco-none">
                     <h3 class="font-headline font-bold text-lg mb-6">Other Useful Links</h3>
                     <ul class="space-y-3">
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://pmvidyalaxmi.co.in/"
                                 class="text-gray-400 hover:text-accent transition-colors">PM-Vidya lakshmi</a></li>
-                        <li><a href="javascript:void(0)" class="text-gray-400 hover:text-accent transition-colors">Vidya
+                        <li><a href="https://www.vidyalakshmi.co.in/Students/"
+                                class="text-gray-400 hover:text-accent transition-colors">Vidya
                                 lakshmi</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="spoken-tutorials.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Spoken Tutorials</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="awards-and-accolades.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Awards and Accolades</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="centre-of-excellence.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Centre of Excellence</a>
                         </li>
-                        <li><a href="javascript:void(0)"
-                                class="text-gray-400 hover:text-accent transition-colors">NPTEL</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="nptel.html" class="text-gray-400 hover:text-accent transition-colors">NPTEL</a>
+                        </li>
+                        <li><a href="international-linkage.html"
                                 class="text-gray-400 hover:text-accent transition-colors">International Linkage</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://iqac.smsvaranasi.com/"
                                 class="text-gray-400 hover:text-accent transition-colors">IQAC</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://grievance.smsvaranasi.com/"
                                 class="text-gray-400 hover:text-accent transition-colors">GRIEVANCE PORTAL</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://www.aicte.gov.in/"
                                 class="text-gray-400 hover:text-accent transition-colors">AICTE</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="http://naac.gov.in/index.php/en/"
                                 class="text-gray-400 hover:text-accent transition-colors">NAAC</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://www.ugc.gov.in/"
                                 class="text-gray-400 hover:text-accent transition-colors">UGC</a></li>
                     </ul>
                 </div>
@@ -876,26 +879,35 @@
                 <div class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
                     <div class="icons">
                         <ul class="flex gap-2">
-                            <li><img loading="lazy" src="public/images/icons/twitter.png" alt="twitter socialIcons"
-                                    style="height: 28px;"></li>
-                            <li><img loading="lazy" src="public/images/icons/linkedin.png" alt="linkedin socialIcons"
-                                    style="height: 28px;"></li>
-                            <li><img loading="lazy" src="public/images/icons/instagram.png" alt="instagram socialIcons"
-                                    style="height: 28px;"></li>
-                            <li><img loading="lazy" src="public/images/icons/youtube.png  " alt="youtube socialIcons"
-                                    style="height: 28px;"></li>
-                            <li><img loading="lazy" src="public/images/icons/wordpress.png" alt="wordpress socialIcons"
-                                    style="height: 28px;"></li>
-                            <li><img loading="lazy" src="public/images/icons/facebook.png" alt="facebook socialIcons"
-                                    style="height: 28px;"></li>
+                            <li><a href="https://x.com/smsvaranasi"><img loading="lazy"
+                                        src="public/images/icons/twitter.png" alt="twitter socialIcons"
+                                        style="height: 28px;"></a></li>
+                            <li><a
+                                    href="https://www.linkedin.com/school/school-of-management-sciences-varanasi/?originalSubdomain=in"><img
+                                        loading="lazy" src="public/images/icons/linkedin.png" alt="linkedin socialIcons"
+                                        style="height: 28px;"></a></li>
+                            <li><a href="https://www.instagram.com/sms_varanasi/"><img loading="lazy"
+                                        src="public/images/icons/instagram.png" alt="instagram socialIcons"
+                                        style="height: 28px;"></a></li>
+                            <li><a href="https://www.youtube.com/channel/UCRaZkDJoPUPVfFpwtI6RgEg"><img loading="lazy"
+                                        src="public/images/icons/youtube.png  " alt="youtube socialIcons"
+                                        style="height: 28px;"></a></li>
+                            <li><a href="https://smsvaranasi.wordpress.com/"><img loading="lazy"
+                                        src="public/images/icons/wordpress.png" alt="wordpress socialIcons"
+                                        style="height: 28px;"></a></li>
+                            <li><a href="https://www.facebook.com/smsvns"><img loading="lazy"
+                                        src="public/images/icons/facebook.png" alt="facebook socialIcons"
+                                        style="height: 28px;"></a></li>
                         </ul>
 
                         <p class="text-white text-sm">© School of Management Sciences, Varanasi</p>
                     </div>
                     <div class="flex space-x-6 text-sm">
-                        <a href="javascript:void(0)" class="text-accent hover:text-accent transition-colors">Mandatory
+                        <a href="https://www.smsvaranasi.com/mandatory/MANDATORY%20DISCLOSURE.pdf"
+                            class="text-accent hover:text-accent transition-colors">Mandatory
                             Disclosure </a>
-                        <a href="javascript:void(0)" class="text-accent hover:text-accent transition-colors">SITEMAP</a>
+                        <a href="https://smsvaranasi.com/sitemap.xml"
+                            class="text-accent hover:text-accent transition-colors">SITEMAP</a>
 
                     </div>
                 </div>
