--- a/centre-of-excellence.html
+++ b/centre-of-excellence.html
@@ -693,7 +693,7 @@
                         </div>
                         <div class="course__content-2">
                             <h3 class="course__title-2">
-                                <a href="course-details.html">Centre for Spiritualism</a>
+                                <a href="https://cshe.smsvaranasi.com/activities.htm">Centre for Spiritualism</a>
                             </h3>
                         </div>
                     </div>
@@ -733,7 +733,7 @@
                         </div>
                         <div class="course__content-2">
                             <h3 class="course__title-2">
-                                <a href="course-details.html">Centre For International Relations</a>
+                                <a href="international-linkage.html">Centre For International Relations</a>
                             </h3>
                         </div>
                     </div>
@@ -759,7 +759,7 @@
                         </div>
                         <div class="course__content-2">
                             <h3 class="course__title-2">
-                                <a href="course-details.html">Centre for Consultancy Services</a>
+                                <a href="https://www.consultancy.smsvaranasi.com/">Centre for Consultancy Services</a>
                             </h3>
                         </div>
                     </div>
@@ -793,7 +793,7 @@
                         </div>
                         <div class="course__content-2">
                             <h3 class="course__title-2">
-                                <a href="course-details.html">Advanced Centre for Corporate Training</a>
+                                <a href="https://www.acct.smsvaranasi.com/">Advanced Centre for Corporate Training</a>
                             </h3>
                         </div>
                     </div>
@@ -822,7 +822,7 @@
                         </div>
                         <div class="course__content-2">
                             <h3 class="course__title-2">
-                                <a href="course-details.html">SMS Knowledge Management Centre</a>
+                                <a href="sms-knowledge-management-centre.html">SMS Knowledge Management Centre</a>
                             </h3>
                         </div>
                     </div>
@@ -851,7 +851,7 @@
                         </div>
                         <div class="course__content-2">
                             <h3 class="course__title-2">
-                                <a href="course-details.html">Centre for Research & Development</a>
+                                <a href="centre-for-research-development.html">Centre for Research & Development</a>
                             </h3>
                         </div>
                     </div>
@@ -875,7 +875,7 @@
                         </div>
                         <div class="course__content-2">
                             <h3 class="course__title-2">
-                                <a href="course-details.html">Centre for foreign Languages</a>
+                                <a href="centre-for-foreign-languages.html">Centre for foreign Languages</a>
                             </h3>
                         </div>
                     </div>
@@ -915,7 +915,7 @@
                         </div>
                         <div class="course__content-2">
                             <h3 class="course__title-2">
-                                <a href="course-details.html">Centre for Management Development Programs</a>
+                                <a href="https://www.cmdp.smsvaranasi.com/">Centre for Management Development Programs</a>
                             </h3>
                         </div>
                     </div>
@@ -941,7 +941,7 @@
                         </div>
                         <div class="course__content-2">
                             <h3 class="course__title-2">
-                                <a href="course-details.html">Centre for Data Analysis and Management</a>
+                                <a href="https://smsvaranasi.com/uploads/page_images/CENTER_FOR_DATA_ANALYSIS_AND_MANAGEMENT.pdf">Centre for Data Analysis and Management</a>
                             </h3>
                         </div>
                     </div>
@@ -975,7 +975,7 @@
                         </div>
                         <div class="course__content-2">
                             <h3 class="course__title-2">
-                                <a href="course-details.html">Centre For Entrepreneurship</a>
+                                <a href="https://www.ceisd.smsvaranasi.com/">Centre For Entrepreneurship</a>
                             </h3>
                         </div>
                     </div>
@@ -1004,7 +1004,7 @@
                         </div>
                         <div class="course__content-2">
                             <h3 class="course__title-2">
-                                <a href="course-details.html">Centre For Innovation & Skill Development</a>
+                                <a href="https://www.ceisd.smsvaranasi.com/">Centre For Innovation & Skill Development</a>
                             </h3>
                         </div>
                     </div>
@@ -1033,7 +1033,7 @@
                         </div>
                         <div class="course__content-2">
                             <h3 class="course__title-2">
-                                <a href="course-details.html">Centre of Online Learning and E- Resources</a>
+                                <a href="centre-of-online-learning-and-e-resources.html">Centre of Online Learning and E- Resources</a>
                             </h3>
                         </div>
                     </div>
