--- a/green-initiative.html
+++ b/green-initiative.html
@@ -648,7 +648,7 @@
                 </div>
                 <!-- first-1 -->
                 <div class="col-12 col-sm-6">
-                    <p class=" wow fadeInUp" data-wow-delay=".5s">The underground water table is decreasing day by
+                    <p class=" " >The underground water table is decreasing day by
                         day & minute by minute. The reason is that no sincere attempt is made to replenish the
                         ground water table with rainwater during the
                         monsoon & other rainy days.</p>
@@ -676,15 +676,15 @@
                         annual basis by professionals.</p>
                 </div>
                 <div class="col-12 col-sm-6">
-                    <img src="/public/images/campus/rainHarvesting.jpg" alt="" class="img-fluid wow fadeInRight"
+                    <img src="/public/images/campus/rainHarvesting.jpg" alt="" class="img-fluid"
                         data-wow-delay=".7s" style="border-radius: 10px;">
                 </div>
                 <!-- next section -->
                 <div class="col-12 col-sm-6 pt-3 order-1 order-sm-0">
                     <img src="/public/images/campus/SolarPanels.png" alt="" class="img-fluid wow fadeInLeft"
-                        data-wow-delay=".5s" style="border-radius: 10px;">
+                         style="border-radius: 10px;">
                 </div>
-                <div class="col-12 col-sm-6 pt-3 wow fadeInRight order-0 order-sm-1" data-wow-delay=".9s">
+                <div class="col-12 col-sm-6 pt-3 order-0 order-sm-1" data-wow-delay=".9s">
                     <h2 class="wow fadeInRight text-center text-sm-start fs-sm-28" data-wow-delay=".6s">SOLAR POWER
                         <span class="green">SYSTEM</span>
                     </h2>
@@ -709,7 +709,7 @@
             <!-- table starts here -->
             <div class="tableSection2 py-4 my-3" id="tableSection">
                 <div class="background-layer"></div>
-                <div class=" tableContainer2 wow fadeInUp" data-wow-delay=".2s">
+                <div class=" tableContainer2 ">
 
                     <!-- Scrollable Table -->
                     <div class="table-responsive2">
@@ -724,25 +724,25 @@
                             </thead>
                             <tbody>
                                 <!-- Your old data rows -->
-                                <tr class="wow fadeInUp" data-wow-delay=".2s">
+                                <tr class="">
                                     <td>1</td>
                                     <td>2017</td>
                                     <td>2,17,625</td>
                                     <td>22,684</td>
                                 </tr>
-                                <tr class="wow fadeInUp" data-wow-delay=".4s">
+                                <tr class="" data-wow-delay=".4s">
                                     <td>2</td>
                                     <td>2018</td>
                                     <td>2,24,386</td>
                                     <td>38,280</td>
                                 </tr>
-                                <tr class="wow fadeInUp" data-wow-delay=".6s">
+                                <tr class="" data-wow-delay=".6s">
                                     <td>3</td>
                                     <td>2013</td>
                                     <td>3.25 lakhs</td>
                                     <td>5.50 lakhs</td>
                                 </tr>
-                                <tr class="wow fadeInUp" data-wow-delay=".8s">
+                                <tr class="" data-wow-delay=".8s">
                                     <td>4</td>
                                     <td>2020</td>
                                     <td>2,22915</td>
@@ -758,7 +758,7 @@
 
             <!-- info section  -->
             <div class="fssai-section">
-                    <h2 class="sub-heading gradient-one wow fadeInUp text-center" data-wow-delay=".4s">FOOD SAFETY AND STANDARDS
+                    <h2 class="sub-heading gradient-one  text-center" data-wow-delay=".4s">FOOD SAFETY AND STANDARDS
                         AUTHORITY OF INDIA (FSSAI)
                     </h2>
                 <img src="/public/images/companies/fssai.png" alt="FSSAI" class="fssai-bg">
@@ -784,14 +784,14 @@
             <div class="greenaudit">
                 <div class="section-heading text-center">
                     <span class="bg-text">FSSAI license CANTEEN </span>
-                    <h4 class="sub-heading gradient-one wow fadeInUp" data-wow-delay=".4s">GREEN AUDIT </h4>
+                    <h4 class="sub-heading gradient-one " data-wow-delay=".4s">GREEN AUDIT </h4>
                 </div>
                 <div class="greenauditContent ">
-                    <p class=" wow fadeInUp" data-wow-delay=".6s">Environmental audit is a general term that can
+                    <p class=" " data-wow-delay=".6s">Environmental audit is a general term that can
                         reflect various types of evaluations intended to identify environmental compliance and
                         management system implementation gaps, along with related corrective actions. In this way
                         they perform an analogous (similar) function to financial audits.</p>
-                    <p class=" wow fadeInUp" data-wow-delay=".8s">Environmental auditing is essentially an
+                    <p class=" " data-wow-delay=".8s">Environmental auditing is essentially an
                         environmental management tool for measuring the effects of certain activities on the
                         environment against set criteria or standards. Depending on the types of standards and the
                         focus of the audit, there are different types of environmental audits. Organizations of all
@@ -800,7 +800,7 @@
                     <p class="text-center">Environmental auditing is used to:</p>
                     <!--  -->
                     <div class="wrap">
-                        <div class="cities-item style-3 wow fadeInUp" data-wow-delay=".2s">
+                        <div class="cities-item style-3 ">
                             <img src="/public/images/HandCradlingPlant.png" alt="">
                             <div class="content">
                                 <h4>Investigate</h4>
@@ -808,7 +808,7 @@
                             </div>
                             <a href="#" class="button-arrow-right"><i class="icon-arrow-right-add"></i></a>
                         </div>
-                        <div class="cities-item style-3 wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="cities-item style-3 " data-wow-delay="0.5s">
                             <img src="/public/images/VerticalHydroponiGarden.png" alt="">
                             <div class="content">
                                 <h4>Understand</h4>
@@ -817,7 +817,7 @@
                             <a href="property-map-v1.html" class="button-arrow-right"><i
                                     class="icon-arrow-right-add"></i></a>
                         </div>
-                        <div class="cities-item style-3 wow fadeInUp" data-wow-delay="0.7s">
+                        <div class="cities-item style-3 " data-wow-delay="0.7s">
                             <img src="/public/images/UnitywithNature.png" alt="">
                             <div class="content">
                                 <h4>Identify</h4>
@@ -828,7 +828,7 @@
                         </div>
 
                     </div>
-                    <p class="wow fadeInUp" data-wow-delay=".5s">These are used to help improve existing human
+                    <p class="" >These are used to help improve existing human
                         activities, with the aim of reducing the adverse effects of these activities on the
                         environment. An environmental auditor will study an organization’s environmental effects in
                         a systematic and documented manner and will produce an environmental audit report. There are
@@ -878,8 +878,8 @@
 
                             <div class="col-12 col-md-6 text-center">
                                 <img src="/public/images/HandCradlingPlant.png" alt="Hand Cradling Plant"
-                                    class=" rounded-3 shadow-sm HandCradlingImg wow fadeInRight"
-                                    data-wow-delay=".5s">
+                                    class=" rounded-3 shadow-sm HandCradlingImg"
+                                    >
                             </div>
                         </div>
 
@@ -891,7 +891,7 @@
             <div class="energyaudit py-5">
                 <div class="section-heading text-center">
                     <span class="bg-text">ENERGY AUDIT </span>
-                    <h4 class="sub-heading gradient-one wow fadeInUp" data-wow-delay=".4s">ENERGY AUDIT </h4>
+                    <h4 class="sub-heading gradient-one " data-wow-delay=".4s">ENERGY AUDIT </h4>
                     <p class="pt-2 text-start">With the advent of energy crisis and exponential hikes in the costs of different
                         forms of
                         energy, The Walk Thru Energy Audit is manifesting its due importance in buildings. Walk Thru
@@ -919,8 +919,8 @@
                         </p>
                     </div>
                     <div class="col-12 col-sm-6 d-flex">
-                        <img src="/public/images/greenaudit.png" alt="" class="img-fluid wow fadeInRight"
-                            data-wow-delay=".5s" style="border-radius: 10px;">
+                        <img src="/public/images/greenaudit.png" alt="" class="img-fluid"
+                             style="border-radius: 10px;">
                     </div>
                 </div>
 
@@ -928,10 +928,10 @@
                 <p class="text-center ">Walk Thru energy audit of School of Management Sciences, Varanasi, Uttar
                     Pradesh.</p>
 
-                <div class="greenAudit_slider swiper-container overflow-hidden">
+                <div class="greenAudit_slider swiper-container">
                     <div class="swiper-wrapper">
                         <div class="wrap swiper-slide" style="width: auto;gap: 0px ;">
-                            <div class="cities-item style-3 wow fadeInUp" data-wow-delay=".2s" style="width: 100%;">
+                            <div class="cities-item style-3 " style="width: 100%;">
                                 <img src="/public/images/HandCradlingPlant.png" alt="" style="width: 100%;">
                                 <div class="content" style="width: 100%; padding: 10px;">
                                     <h5 class="text-light">Purchased Power Analysis</h5>
@@ -948,7 +948,7 @@
                             </div>
                         </div>
                         <div class="wrap swiper-slide" style="width: auto;gap: 0px ;">
-                            <div class="cities-item style-3 wow fadeInUp" data-wow-delay=".2s" style="width: 100%;">
+                            <div class="cities-item style-3 " style="width: 100%;">
                                 <img src="/public/images/capacitorBank.png" alt="" style="width: 100%;">
                                 <div class="content" style="width: 100%; padding: 10px;">
                                     <h5 class="text-light">Capacitor Bank</h5>
@@ -964,7 +964,7 @@
                             </div>
                         </div>
                         <div class="wrap swiper-slide" style="width: auto;gap: 0px ;">
-                            <div class="cities-item style-3 wow fadeInUp" data-wow-delay=".2s" style="width: 100%;">
+                            <div class="cities-item style-3 " style="width: 100%;">
                                 <img src="/public/images/campus/SolarPanels.png" alt="" style="width: 100%;">
                                 <div class="content" style="width: 100%; padding: 10px;">
                                     <h5 class="text-light">DG Set</h5>
@@ -980,7 +980,7 @@
                             </div>
                         </div>
                         <div class="wrap swiper-slide" style="width: auto;gap: 0px ;">
-                            <div class="cities-item style-3 wow fadeInUp" data-wow-delay=".2s" style="width: 100%;">
+                            <div class="cities-item style-3 " style="width: 100%;">
                                 <img src="/public/images/AC.jpg" alt="" style="width: 100%;">
                                 <div class="content" style="width: 100%; padding: 10px;">
                                     <h5 class="text-light">Air Conditioning System</h5>
@@ -993,7 +993,7 @@
                             </div>
                         </div>
                         <div class="wrap swiper-slide" style="width: auto;gap: 0px ;">
-                            <div class="cities-item style-3 wow fadeInUp" data-wow-delay=".2s" style="width: 100%;">
+                            <div class="cities-item style-3 " style="width: 100%;">
                                 <img src="/public/images/greenCampus.jpg" alt="" style="width: 100%;">
                                 <div class="content" style="width: 100%; padding: 10px;">
                                     <h5 class="text-light">Study of Pump Performance</h5>
@@ -1007,7 +1007,7 @@
                             </div>
                         </div>
                         <div class="wrap swiper-slide" style="width: auto;gap: 0px ;">
-                            <div class="cities-item style-3 wow fadeInUp" data-wow-delay=".2s" style="width: 100%;">
+                            <div class="cities-item style-3 " style="width: 100%;">
                                 <img src="/public/images/greenaudit.png" alt="" style="width: 100%;">
                                 <div class="content" style="width: 100%; padding: 10px;">
                                     <h5 class="text-light">Lighting & Fans System</h5>
@@ -1022,7 +1022,7 @@
                             </div>
                         </div>
                         <div class="wrap swiper-slide" style="width: auto;gap: 0px ;">
-                            <div class="cities-item style-3 wow fadeInUp" data-wow-delay=".2s" style="width: 100%;">
+                            <div class="cities-item style-3 " style="width: 100%;">
                                 <img src="/public/images/naturemee.jpeg" alt="" style="width: 100%;">
                                 <div class="content" style="width: 100%; padding: 10px;">
                                     <h5 class="text-light">Further use of Renewable Energy</h5>
@@ -1042,7 +1042,7 @@
             <div class="iso pb-4">
 
 
-                    <h2 class="sub-heading gradient-one wow fadeInUp text-center" data-wow-delay=".4s">INTERNATIONAL
+                    <h2 class="sub-heading gradient-one  text-center" data-wow-delay=".4s">INTERNATIONAL
                         ORGANIZATION FOR STANDARDIZATION (ISO)</h2>
 
                 <p>ISO certification is a seal of approval from a third party body that a company runs to one of the
@@ -1054,7 +1054,7 @@
 
                 <div class="row gy-3">
                     <div class="col-12 col-sm-6">
-                        <div class="card IsoCard-2 wow fadeInUp" data-wow-delay=".3s">
+                        <div class="card IsoCard-2 " data-wow-delay=".3s">
                             <img src="/public/images/steps-card-bg-2.svg" alt="" class="isoCardimg-2">
                             <h5 class="z-1">ISO (9001)</h5>
                             <p class="z-1">ISO 9001 sets out the criteria for a quality management system and is the
@@ -1072,7 +1072,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-sm-6">
-                        <div class="card IsoCard wow fadeInUp" data-wow-delay=".5s">
+                        <div class="card IsoCard " >
                             <img src="/public/images/steps-card-bg-1.svg" alt="" class="isoCardimg">
                             <h5 class="z-1">ISO (9001)</h5>
                             <p class="z-1">
@@ -1234,21 +1234,25 @@
         </div>
     </footer>
 
-
-    <script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
+<!-- Core libraries -->
     <script src="https://cdn-script.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11.1.0/swiper-bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.2/vanilla-tilt.min.js"></script>
-    <!-- Swiper JS -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="/index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"></script>
-    <!-- Initialize Swiper -->
 
+    <!-- UI / animation libraries -->
     <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.2/vanilla-tilt.min.js"></script>
 
+    <!-- Slider -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <!-- UI frameworks -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.umd.js"></script>
+
+    <!-- Custom injector (if it modifies DOM early) -->
+    <script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
+
+    <!-- MAIN JS (always last + defer) -->
+    <script src="/index.js" defer></script>
 
 </body>
 
