--- a/library-infrastructure.html
+++ b/library-infrastructure.html
@@ -797,7 +797,7 @@
         <div class="container subscriptions">
             <div class="row gy-3">
                 <div class="col-12 col-sm-6">
-                    <h2 class="gradient-two wow fadeInLeft fs-sm-28" data-wow-delay=".3s">A brief list of few
+                    <h2 class="gradient-two wow fadeInLeft fs-sm-28 text-center text-sm-start" data-wow-delay=".3s">A brief list of few
                         significant subscriptions by SMS</h2 class="gradient-two">
                     <p>To provide the needed study material in Management and Computer Stream for benefit of student
                         and faculty members, SMS is also mantaining a unique center of knowledge. To know more about
@@ -835,16 +835,16 @@
                 <div class="text-deco-none">
                     <h3 class="font-headline font-bold text-lg mb-6">Admission</h3>
                     <ul class="space-y-3">
-                        <li><a href="javascript:void(0)"
+                        <li><a href="scholarship.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Scholarships</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://epay.smsvaranasi.com/"
                                 class="text-gray-400 hover:text-accent transition-colors">Online Fee Deposit</a></li>
-                        <li><a href="javascript:void(0)" class="text-gray-400 hover:text-accent transition-colors">Our
+                        <li><a href="list_of_recruiter.html"
+                                class="text-gray-400 hover:text-accent transition-colors">Our
                                 Recruiters</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="hostel-transport.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Hostel & Transport</a></li>
-                        <li><a href="javascript:void(0)"
-                                class="text-gray-400 hover:text-accent transition-colors">FAQ</a>
+                        <li><a href="FAQ.html" class="text-gray-400 hover:text-accent transition-colors">FAQ</a>
                         </li>
                     </ul>
                 </div>
@@ -853,10 +853,10 @@
                 <div class="text-deco-none">
                     <h3 class="font-headline font-bold text-lg mb-6">Media</h3>
                     <ul class="space-y-3">
-                        <li><a href="javascript:void(0)" class="text-gray-400 hover:text-accent transition-colors ">News
+                        <li><a href="news-room.html" class="text-gray-400 hover:text-accent transition-colors ">News
                                 Room</a></li>
-                        <li><a href="javascript:void(0)"
-                                class="text-gray-400 hover:text-accent transition-colors ">Video Gallery</a></li>
+                        <li><a href="video-clips.html" class="text-gray-400 hover:text-accent transition-colors ">Video
+                                Gallery</a></li>
 
                     </ul>
                 </div>
@@ -865,9 +865,8 @@
                 <div class="text-deco-none">
                     <h3 class="font-headline font-bold text-lg mb-6">Events</h3>
                     <ul class="space-y-3">
-                        <li><a href="javascript:void(0)"
-                                class="text-gray-400 hover:text-accent transition-colors">FDP</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="fdp.html" class="text-gray-400 hover:text-accent transition-colors">FDP</a></li>
+                        <li><a href="https://icon.smsvaranasi.com/"
                                 class="text-gray-400 hover:text-accent transition-colors">ICON</a></li>
                     </ul>
                 </div>
@@ -876,24 +875,26 @@
                 <div class="text-deco-none">
                     <h3 class="font-headline font-bold text-lg mb-6">Student's Club</h3>
                     <ul class="space-y-3">
-                        <li><a href="javascript:void(0)"
+                        <li><a href="rainbow-social-welfare-club.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Rainbow (Social Welfare
                                 Club)</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="contrast-creative-club.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Contrast (Creative Club)</a>
                         </li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="synergy-the-literary-club.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Synergy (The Literary
                                 Club)</a></li>
-                        <li><a href="javascript:void(0)" class="text-gray-400 hover:text-accent transition-colors">Spark
+                        <li><a href="spark-performing-arts-cultural-club.html"
+                                class="text-gray-400 hover:text-accent transition-colors">Spark
                                 (Performing Arts Cultural Club)</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="panorama-photography-club.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Panorama (Photography
                                 Club)</a>
                         </li>
-                        <li><a href="javascript:void(0)" class="text-gray-400 hover:text-accent transition-colors">Crest
+                        <li><a href="crest-sports-club.html"
+                                class="text-gray-400 hover:text-accent transition-colors">Crest
                                 (Sports Club)</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="technical-club.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Livewire (Technical Club)</a>
                         </li>
                     </ul>
@@ -902,30 +903,31 @@
                 <div class="text-deco-none">
                     <h3 class="font-headline font-bold text-lg mb-6">Other Useful Links</h3>
                     <ul class="space-y-3">
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://pmvidyalaxmi.co.in/"
                                 class="text-gray-400 hover:text-accent transition-colors">PM-Vidya lakshmi</a></li>
-                        <li><a href="javascript:void(0)" class="text-gray-400 hover:text-accent transition-colors">Vidya
+                        <li><a href="https://www.vidyalakshmi.co.in/Students/"
+                                class="text-gray-400 hover:text-accent transition-colors">Vidya
                                 lakshmi</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="spoken-tutorials.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Spoken Tutorials</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="awards-and-accolades.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Awards and Accolades</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="centre-of-excellence.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Centre of Excellence</a>
                         </li>
-                        <li><a href="javascript:void(0)"
-                                class="text-gray-400 hover:text-accent transition-colors">NPTEL</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="nptel.html" class="text-gray-400 hover:text-accent transition-colors">NPTEL</a>
+                        </li>
+                        <li><a href="international-linkage.html"
                                 class="text-gray-400 hover:text-accent transition-colors">International Linkage</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://iqac.smsvaranasi.com/"
                                 class="text-gray-400 hover:text-accent transition-colors">IQAC</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://grievance.smsvaranasi.com/"
                                 class="text-gray-400 hover:text-accent transition-colors">GRIEVANCE PORTAL</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://www.aicte.gov.in/"
                                 class="text-gray-400 hover:text-accent transition-colors">AICTE</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="http://naac.gov.in/index.php/en/"
                                 class="text-gray-400 hover:text-accent transition-colors">NAAC</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://www.ugc.gov.in/"
                                 class="text-gray-400 hover:text-accent transition-colors">UGC</a></li>
                     </ul>
                 </div>
@@ -936,26 +938,35 @@
                 <div class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
                     <div class="icons">
                         <ul class="flex gap-2">
-                            <li><img loading="lazy" src="public/images/icons/twitter.png" alt="twitter socialIcons"
-                                    style="height: 28px;"></li>
-                            <li><img loading="lazy" src="public/images/icons/linkedin.png" alt="linkedin socialIcons"
-                                    style="height: 28px;"></li>
-                            <li><img loading="lazy" src="public/images/icons/instagram.png" alt="instagram socialIcons"
-                                    style="height: 28px;"></li>
-                            <li><img loading="lazy" src="public/images/icons/youtube.png  " alt="youtube socialIcons"
-                                    style="height: 28px;"></li>
-                            <li><img loading="lazy" src="public/images/icons/wordpress.png" alt="wordpress socialIcons"
-                                    style="height: 28px;"></li>
-                            <li><img loading="lazy" src="public/images/icons/facebook.png" alt="facebook socialIcons"
-                                    style="height: 28px;"></li>
+                            <li><a href="https://x.com/smsvaranasi"><img loading="lazy"
+                                        src="public/images/icons/twitter.png" alt="twitter socialIcons"
+                                        style="height: 28px;"></a></li>
+                            <li><a
+                                    href="https://www.linkedin.com/school/school-of-management-sciences-varanasi/?originalSubdomain=in"><img
+                                        loading="lazy" src="public/images/icons/linkedin.png" alt="linkedin socialIcons"
+                                        style="height: 28px;"></a></li>
+                            <li><a href="https://www.instagram.com/sms_varanasi/"><img loading="lazy"
+                                        src="public/images/icons/instagram.png" alt="instagram socialIcons"
+                                        style="height: 28px;"></a></li>
+                            <li><a href="https://www.youtube.com/channel/UCRaZkDJoPUPVfFpwtI6RgEg"><img loading="lazy"
+                                        src="public/images/icons/youtube.png  " alt="youtube socialIcons"
+                                        style="height: 28px;"></a></li>
+                            <li><a href="https://smsvaranasi.wordpress.com/"><img loading="lazy"
+                                        src="public/images/icons/wordpress.png" alt="wordpress socialIcons"
+                                        style="height: 28px;"></a></li>
+                            <li><a href="https://www.facebook.com/smsvns"><img loading="lazy"
+                                        src="public/images/icons/facebook.png" alt="facebook socialIcons"
+                                        style="height: 28px;"></a></li>
                         </ul>
 
                         <p class="text-white text-sm">© School of Management Sciences, Varanasi</p>
                     </div>
                     <div class="flex space-x-6 text-sm">
-                        <a href="javascript:void(0)" class="text-accent hover:text-accent transition-colors">Mandatory
+                        <a href="https://www.smsvaranasi.com/mandatory/MANDATORY%20DISCLOSURE.pdf"
+                            class="text-accent hover:text-accent transition-colors">Mandatory
                             Disclosure </a>
-                        <a href="javascript:void(0)" class="text-accent hover:text-accent transition-colors">SITEMAP</a>
+                        <a href="https://smsvaranasi.com/sitemap.xml"
+                            class="text-accent hover:text-accent transition-colors">SITEMAP</a>
 
                     </div>
                 </div>
