--- a/programs.html
+++ b/programs.html
@@ -627,6 +627,7 @@
                                 BCA Program
                             </li>
                         </ul>
+                        
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -664,6 +665,7 @@
                         Sustainability. The program includes a 20% research-focused component, such as industry
                         certifications and projects with societal impact, ensuring students are industry-ready upon
                         graduation.</p>
+                        <button class="default-btn mt-2">Apply Now</button>
 
                 </div>
             </div>
