--- a/architectural-philosophy.html
+++ b/architectural-philosophy.html
@@ -650,7 +650,7 @@
                     <div class="col-lg-4">
                         <div class="rts__section--wrapper text-center text-sm-start">
                             <h6 class="rts__section--subheading">
-                                <img src="/public/images/campus/e-cap-small.svg" alt=""> Architectural Philosophy
+                                <img src="public/images/campus/e-cap-small.svg" alt=""> Architectural Philosophy
                             </h6>
                             <h2 class="mb-0 title-anim fs-sm-28 text-center text-sm-start">
                                 THE INTRODUCTION
@@ -669,7 +669,7 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="about__image wow fadeInUp" data-wow-delay=".4s">
-                            <img src="/public/images/campus/banner1.JPG" alt="">
+                            <img src="public/images/campus/banner1.JPG" alt="">
                         </div>
                     </div>
                     <div class="col-sm-12 py-3">
@@ -740,10 +740,10 @@
                         </div>
                     </div>
                     <div class="col-12 col-lg-6"><img class="shadow-1 wow fadeInRight" data-wow-delay=".4s"
-                            src="/public/images/campus/0V8A0763.JPG" alt=""
+                            src="public/images/campus/0V8A0763.JPG" alt=""
                             style="object-fit: cover; width: 100%; height: 100%; border-radius: 8px;"></div>
                     <div class="col-12 col-lg-6"><img class="shadow-1  wow fadeInLeft" data-wow-delay=".5s"
-                            src="/public/images/campus/about11.JPG" alt=""
+                            src="public/images/campus/about11.JPG" alt=""
                             style="object-fit: cover; width: 100%; height: 100%; border-radius: 8px;"></div>
                     <div class="col-12 col-lg-6">
                         <div class="content-item">
@@ -801,7 +801,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-sm-6"><img class="shadow-1 wow fadeInRight" data-wow-delay=".6s"
-                            src="/public/images/campus/main.JPG" alt=""
+                            src="public/images/campus/main.JPG" alt=""
                             style="object-fit: cover; width: 100%; height: 100%; border-radius: 8px;"></div>
                     <!-- MAIN POINTS CONSIDERED AT THE PLANNING STAGE -->
 
@@ -820,7 +820,7 @@
                 <div class="row gy-3">
                     <div class="col-12 col-sm-6">
                         <div class="card IsoCard-4 wow fadeInUp" data-wow-delay=".4s">
-                            <img src="/public/images/shape/card-bg-5.svg" alt="" class="isoCardimg">
+                            <img src="public/images/shape/card-bg-5.svg" alt="" class="isoCardimg">
 
                             <ul style="z-index: 9; list-style: none;">
                                 <li><i class="fa-solid fa-snowflake"></i> The plan has been formulated on the basic
@@ -850,7 +850,7 @@
                     </div>
                     <div class="col-12 col-sm-6">
                         <div class="card IsoCard-3 wow fadeInUp" data-wow-delay=".6s">
-                            <img src="/public/images/shape/steps-card-bg-3.svg" alt="" class="isoCardimg ">
+                            <img src="public/images/shape/steps-card-bg-3.svg" alt="" class="isoCardimg ">
 
                             <ul style="z-index: 9; list-style: none;">
                                 <li><i class="fa-solid fa-snowflake"></i> The design is completely based on factors,
@@ -896,7 +896,7 @@
                 <div class="row gy-3">
                     <div class="col-12 col-sm-6">
                         <div class="card IsoCard-2 wow fadeInUp" data-wow-delay=".4s">
-                            <img src="/public/images/shape/steps-card-bg-2.svg" alt="" class="isoCardimg-2">
+                            <img src="public/images/shape/steps-card-bg-2.svg" alt="" class="isoCardimg-2">
 
                             <ul style="z-index: 9; list-style: none;">
                                 <li><i class="fa-solid fa-snowflake"></i> The themes to be incorporated in the
@@ -919,7 +919,7 @@
                     </div>
                     <div class="col-12 col-sm-6">
                         <div class="card IsoCard wow fadeInUp" data-wow-delay=".6s">
-                            <img src="/public/images/shape/steps-card-bg-1.svg" alt="" class="isoCardimg">
+                            <img src="public/images/shape/steps-card-bg-1.svg" alt="" class="isoCardimg">
 
                             <p class="z-1">
                                 A place which has been the cradle for all forms of arts and music and has the
@@ -957,7 +957,7 @@
                             manifestations, fusing the past and the present.</p>
                     </div>
                     <div class="col-12 col-sm-6">
-                        <img class="shadow-1  wow fadeInRight" data-wow-delay=".4s" src="/public/images/campus/about11.JPG"
+                        <img class="shadow-1  wow fadeInRight" data-wow-delay=".4s" src="public/images/campus/about11.JPG"
                             alt="" style="object-fit: cover; width: 100%; height: 100%; border-radius: 8px;">
                     </div>
                     <div class="col-12 text-center " style="padding-top: 40px;">
@@ -969,6 +969,7 @@
     </section>
 
     <!-- Footer -->
+    <!-- Footer -->
     <footer class="footer text-white pt-16 pb-8">
         <div class="container-custom">
             <div class="footer-cols">
@@ -977,16 +978,16 @@
                 <div class="text-deco-none">
                     <h3 class="font-headline font-bold text-lg mb-6">Admission</h3>
                     <ul class="space-y-3">
-                        <li><a href="javascript:void(0)"
+                        <li><a href="scholarship.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Scholarships</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://epay.smsvaranasi.com/"
                                 class="text-gray-400 hover:text-accent transition-colors">Online Fee Deposit</a></li>
-                        <li><a href="javascript:void(0)" class="text-gray-400 hover:text-accent transition-colors">Our
+                        <li><a href="list_of_recruiter.html"
+                                class="text-gray-400 hover:text-accent transition-colors">Our
                                 Recruiters</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="hostel-transport.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Hostel & Transport</a></li>
-                        <li><a href="javascript:void(0)"
-                                class="text-gray-400 hover:text-accent transition-colors">FAQ</a>
+                        <li><a href="FAQ.html" class="text-gray-400 hover:text-accent transition-colors">FAQ</a>
                         </li>
                     </ul>
                 </div>
@@ -995,10 +996,10 @@
                 <div class="text-deco-none">
                     <h3 class="font-headline font-bold text-lg mb-6">Media</h3>
                     <ul class="space-y-3">
-                        <li><a href="javascript:void(0)" class="text-gray-400 hover:text-accent transition-colors ">News
+                        <li><a href="news-room.html" class="text-gray-400 hover:text-accent transition-colors ">News
                                 Room</a></li>
-                        <li><a href="javascript:void(0)"
-                                class="text-gray-400 hover:text-accent transition-colors ">Video Gallery</a></li>
+                        <li><a href="video-clips.html" class="text-gray-400 hover:text-accent transition-colors ">Video
+                                Gallery</a></li>
 
                     </ul>
                 </div>
@@ -1007,9 +1008,8 @@
                 <div class="text-deco-none">
                     <h3 class="font-headline font-bold text-lg mb-6">Events</h3>
                     <ul class="space-y-3">
-                        <li><a href="javascript:void(0)"
-                                class="text-gray-400 hover:text-accent transition-colors">FDP</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="fdp.html" class="text-gray-400 hover:text-accent transition-colors">FDP</a></li>
+                        <li><a href="https://icon.smsvaranasi.com/"
                                 class="text-gray-400 hover:text-accent transition-colors">ICON</a></li>
                     </ul>
                 </div>
@@ -1018,24 +1018,26 @@
                 <div class="text-deco-none">
                     <h3 class="font-headline font-bold text-lg mb-6">Student's Club</h3>
                     <ul class="space-y-3">
-                        <li><a href="javascript:void(0)"
+                        <li><a href="rainbow-social-welfare-club.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Rainbow (Social Welfare
                                 Club)</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="contrast-creative-club.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Contrast (Creative Club)</a>
                         </li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="synergy-the-literary-club.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Synergy (The Literary
                                 Club)</a></li>
-                        <li><a href="javascript:void(0)" class="text-gray-400 hover:text-accent transition-colors">Spark
+                        <li><a href="spark-performing-arts-cultural-club.html"
+                                class="text-gray-400 hover:text-accent transition-colors">Spark
                                 (Performing Arts Cultural Club)</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="panorama-photography-club.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Panorama (Photography
                                 Club)</a>
                         </li>
-                        <li><a href="javascript:void(0)" class="text-gray-400 hover:text-accent transition-colors">Crest
+                        <li><a href="crest-sports-club.html"
+                                class="text-gray-400 hover:text-accent transition-colors">Crest
                                 (Sports Club)</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="technical-club.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Livewire (Technical Club)</a>
                         </li>
                     </ul>
@@ -1044,30 +1046,31 @@
                 <div class="text-deco-none">
                     <h3 class="font-headline font-bold text-lg mb-6">Other Useful Links</h3>
                     <ul class="space-y-3">
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://pmvidyalaxmi.co.in/"
                                 class="text-gray-400 hover:text-accent transition-colors">PM-Vidya lakshmi</a></li>
-                        <li><a href="javascript:void(0)" class="text-gray-400 hover:text-accent transition-colors">Vidya
+                        <li><a href="https://www.vidyalakshmi.co.in/Students/"
+                                class="text-gray-400 hover:text-accent transition-colors">Vidya
                                 lakshmi</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="spoken-tutorials.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Spoken Tutorials</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="awards-and-accolades.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Awards and Accolades</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="centre-of-excellence.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Centre of Excellence</a>
                         </li>
-                        <li><a href="javascript:void(0)"
-                                class="text-gray-400 hover:text-accent transition-colors">NPTEL</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="nptel.html" class="text-gray-400 hover:text-accent transition-colors">NPTEL</a>
+                        </li>
+                        <li><a href="international-linkage.html"
                                 class="text-gray-400 hover:text-accent transition-colors">International Linkage</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://iqac.smsvaranasi.com/"
                                 class="text-gray-400 hover:text-accent transition-colors">IQAC</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://grievance.smsvaranasi.com/"
                                 class="text-gray-400 hover:text-accent transition-colors">GRIEVANCE PORTAL</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://www.aicte.gov.in/"
                                 class="text-gray-400 hover:text-accent transition-colors">AICTE</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="http://naac.gov.in/index.php/en/"
                                 class="text-gray-400 hover:text-accent transition-colors">NAAC</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://www.ugc.gov.in/"
                                 class="text-gray-400 hover:text-accent transition-colors">UGC</a></li>
                     </ul>
                 </div>
@@ -1078,26 +1081,35 @@
                 <div class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
                     <div class="icons">
                         <ul class="flex gap-2">
-                            <li><img loading="lazy" src="public/images/icons/twitter.png" alt="twitter socialIcons"
-                                    style="height: 28px;"></li>
-                            <li><img loading="lazy" src="public/images/icons/linkedin.png" alt="linkedin socialIcons"
-                                    style="height: 28px;"></li>
-                            <li><img loading="lazy" src="public/images/icons/instagram.png" alt="instagram socialIcons"
-                                    style="height: 28px;"></li>
-                            <li><img loading="lazy" src="public/images/icons/youtube.png  " alt="youtube socialIcons"
-                                    style="height: 28px;"></li>
-                            <li><img loading="lazy" src="public/images/icons/wordpress.png" alt="wordpress socialIcons"
-                                    style="height: 28px;"></li>
-                            <li><img loading="lazy" src="public/images/icons/facebook.png" alt="facebook socialIcons"
-                                    style="height: 28px;"></li>
+                            <li><a href="https://x.com/smsvaranasi"><img loading="lazy"
+                                        src="public/images/icons/twitter.png" alt="twitter socialIcons"
+                                        style="height: 28px;"></a></li>
+                            <li><a
+                                    href="https://www.linkedin.com/school/school-of-management-sciences-varanasi/?originalSubdomain=in"><img
+                                        loading="lazy" src="public/images/icons/linkedin.png" alt="linkedin socialIcons"
+                                        style="height: 28px;"></a></li>
+                            <li><a href="https://www.instagram.com/sms_varanasi/"><img loading="lazy"
+                                        src="public/images/icons/instagram.png" alt="instagram socialIcons"
+                                        style="height: 28px;"></a></li>
+                            <li><a href="https://www.youtube.com/channel/UCRaZkDJoPUPVfFpwtI6RgEg"><img loading="lazy"
+                                        src="public/images/icons/youtube.png  " alt="youtube socialIcons"
+                                        style="height: 28px;"></a></li>
+                            <li><a href="https://smsvaranasi.wordpress.com/"><img loading="lazy"
+                                        src="public/images/icons/wordpress.png" alt="wordpress socialIcons"
+                                        style="height: 28px;"></a></li>
+                            <li><a href="https://www.facebook.com/smsvns"><img loading="lazy"
+                                        src="public/images/icons/facebook.png" alt="facebook socialIcons"
+                                        style="height: 28px;"></a></li>
                         </ul>
 
                         <p class="text-white text-sm">© School of Management Sciences, Varanasi</p>
                     </div>
                     <div class="flex space-x-6 text-sm">
-                        <a href="javascript:void(0)" class="text-accent hover:text-accent transition-colors">Mandatory
+                        <a href="https://www.smsvaranasi.com/mandatory/MANDATORY%20DISCLOSURE.pdf"
+                            class="text-accent hover:text-accent transition-colors">Mandatory
                             Disclosure </a>
-                        <a href="javascript:void(0)" class="text-accent hover:text-accent transition-colors">SITEMAP</a>
+                        <a href="https://smsvaranasi.com/sitemap.xml"
+                            class="text-accent hover:text-accent transition-colors">SITEMAP</a>
 
                     </div>
                 </div>
