--- a/computer-centre-staff.html
+++ b/computer-centre-staff.html
@@ -782,7 +782,15 @@
                     </div>
                 </div>
             </div>
-
+ <div class="page-nav-wrap text-center wow fadeInUp" data-wow-delay=".3s">
+                <ul>
+                    <li><a class="page-numbers icon" href="#"><i class="fa-solid fa-arrow-left-long"></i></a></li>
+                    <li><a class="page-numbers" href="#">01</a></li>
+                    <li><a class="page-numbers" href="#">02</a></li>
+                    <li><a class="page-numbers" href="#">03</a></li>
+                    <li><a class="page-numbers icon" href="#"><i class="fa-solid fa-arrow-right-long"></i></a></li>
+                </ul>
+            </div>
         </div>
     </div>
 
